--- a/ui/ptt_main.ui
+++ b/ui/ptt_main.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>601</width>
+    <width>621</width>
     <height>392</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>601</width>
+    <width>621</width>
     <height>392</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>601</width>
+    <width>621</width>
     <height>392</height>
    </size>
   </property>
@@ -38,7 +38,7 @@
      <rect>
       <x>10</x>
       <y>40</y>
-      <width>581</width>
+      <width>601</width>
       <height>288</height>
      </rect>
     </property>
@@ -78,89 +78,43 @@
     <attribute name="verticalHeaderMinimumSectionSize">
      <number>22</number>
     </attribute>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>New Row</string>
-     </property>
-    </row>
     <column>
      <property name="text">
       <string>     Démarrée le     </string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Segoe UI</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
     </column>
     <column>
      <property name="text">
       <string>Durée</string>
      </property>
+     <property name="font">
+      <font>
+       <family>Segoe UI</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
     </column>
     <column>
      <property name="text">
       <string>Description</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Segoe UI</family>
+       <pointsize>8</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
     </column>
    </widget>
@@ -169,7 +123,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>431</width>
+      <width>451</width>
       <height>22</height>
      </rect>
     </property>
@@ -180,7 +134,7 @@
    <widget class="QPushButton" name="btn_task_add">
     <property name="geometry">
      <rect>
-      <x>450</x>
+      <x>470</x>
       <y>10</y>
       <width>141</width>
       <height>23</height>
@@ -193,7 +147,7 @@
    <widget class="QPushButton" name="btn_lst_tasks_empty">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>490</x>
       <y>340</y>
       <width>121</width>
       <height>23</height>
@@ -209,7 +163,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>601</width>
+     <width>621</width>
      <height>19</height>
     </rect>
    </property>
